[gd_scene load_steps=9 format=3 uid="uid://cxsq4xo0mdscc"]

[ext_resource type="PackedScene" uid="uid://cqwj1cct67j22" path="res://UI/pause_menu/menu_panel.tscn" id="1_3m60c"]
[ext_resource type="Texture2D" uid="uid://dwubf3o5hpss0" path="res://assets/art/icons.png" id="2_dy4hj"]
[ext_resource type="Script" path="res://UI/pause_menu/backpack_panel/backpack_panel.gd" id="2_gql3j"]
[ext_resource type="PackedScene" uid="uid://bcpspkiqwyq2a" path="res://UI/pause_menu/backpack_panel/card.tscn" id="3_je4i0"]
[ext_resource type="PackedScene" uid="uid://fveyt4lvjp6h" path="res://common/inventory/inventory.tscn" id="4_spyv3"]
[ext_resource type="AudioStream" uid="uid://c7la3jd84pawn" path="res://assets/sounds/select_card.ogg" id="6_e7emj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ionfg"]
atlas = ExtResource("2_dy4hj")
region = Rect2(80, 240, 16, 16)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_roy30"]

[node name="BackpackPanel" instance=ExtResource("1_3m60c")]
offset_right = 362.0
offset_bottom = 276.0
script = ExtResource("2_gql3j")
card_scene = ExtResource("3_je4i0")
icon = SubResource("AtlasTexture_ionfg")

[node name="Content" type="PanelContainer" parent="." index="0"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_roy30")

[node name="Inventory" parent="Content" index="0" instance=ExtResource("4_spyv3")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="GridContainer" parent="Content/Inventory" index="0"]
columns = 6

[node name="EmptyLabel" type="Label" parent="Content" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "空空如也"

[node name="Sounds" type="Node" parent="." index="1"]

[node name="SelectCard" type="AudioStreamPlayer" parent="Sounds" index="0"]
stream = ExtResource("6_e7emj")
bus = &"SFX"

[connection signal="slot_clicked" from="Content/Inventory" to="." method="_on_inventory_slot_clicked"]

[editable path="Content/Inventory"]
